# outfit_assistant

./: .gitignore  pyproject.toml  readme.md  requirements.txt  run.py
app/: __init__.py  forms.py
app/llm/: __init__.py  base.py  service.py
app/models/: __init__.py  chat.py  clothing.py  llm_config.py  user.py  weather.py
app/routes/: __init__.py  api_keys.py  auth.py  chat.py  wardrobe.py  weather.py
app/services/: __init__.py  location.py  weather.py
app/static/css/: style.css
app/templates/: base.html  index.html  login.html  register.html
app/templates/api_keys/: manage.html
app/templates/chat/: index.html
app/templates/wardrobe/: form.html  index.html
